--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <span class="flaticon-graduation"></span>
             </div>
             <div class="text">
-              <h2 class="number"><span class="countup">100+</span></h2>
+              <h2 class="number"><span class="countup">100</span>+</h2>
               <span class="caption">Success Stories</span>
             </div>
           </div>
@@ -230,7 +230,7 @@
                 <div class="d-flex">
                   <div class="icon"><span class="flaticon-engineer"></span></div>
                   <div class="text">
-                    <h2>MEDICAL ENTRANCE REPEATER,NEET</h2>
+                    <h2>IIT - JEE Repeater's batches</h2>
                     <p class="rate">
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star"></span>
@@ -281,6 +281,56 @@
                   <div class="icon"><span class="flaticon-algorithm"></span></div>
                   <div class="text">
                     <h2>CUET coaching</h2>
+                    <p class="rate">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </p>
+                    <div class="author-wrap d-flex align-items-center">
+
+                    </div>
+                  </div>
+                </div>
+                <div class="text-center bg-light rounded py-2 my-3">
+                </div>
+                <div class="text-center">
+                  <a href="contact.html" class="btn d-block btn-primary btn-outline-primary py-3">Enroll Now!</a>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="courses">
+                <div class="d-flex">
+                  <div class="icon"><span class="flaticon-algorithm"></span></div>
+                  <div class="text">
+                    <h2>+1,+2 Long term batches</h2>
+                    <p class="rate">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </p>
+                    <div class="author-wrap d-flex align-items-center">
+
+                    </div>
+                  </div>
+                </div>
+                <div class="text-center bg-light rounded py-2 my-3">
+                </div>
+                <div class="text-center">
+                  <a href="contact.html" class="btn d-block btn-primary btn-outline-primary py-3">Enroll Now!</a>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="courses">
+                <div class="d-flex">
+                  <div class="icon"><span class="flaticon-algorithm"></span></div>
+                  <div class="text">
+                    <h2>NEET, JEE Crash Courses</h2>
                     <p class="rate">
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star"></span>
