--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
             </a>
             <div class="text">
               <p class="meta"></p>
-              <h3 class="heading mb-3"><a href="#">Independence &amp; Day</a></h3>
+              <h3 class="heading mb-3"><a href="#">Independence Day</a></h3>
               <p>Flag hoisting,Painting and drawing competitions
 ,Quiz contest</p>
             </div>
@@ -789,7 +789,7 @@
               <a class="blog-img img rounded" style="background-image: url(images/image_2.jpg);"></a>
               <div class="text">
                 <div class="meta">
-                  <div><a href="#"><span class="fa fa-calendar"></span> Jan. 18, 2023</a></div>
+                  <div><a href="#"><span class="fa fa-calendar"></span> Aug. 15, 2023</a></div>
                   <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
                 </div>
                 <h3 class="heading"><a href="#">Independence Day</a></h3>
