--- a/courses.html
+++ b/courses.html
@@ -241,7 +241,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4" data-aos="flip-left" data-aos-delay="100" data-aos-duration="1000">
+        <!-- <div class="col-md-6 col-lg-4" data-aos="flip-left" data-aos-delay="100" data-aos-duration="1000">
           <div class="courses">
             <div class="d-flex">
               <div class="icon"><span class="fa-solid fa-person-running fa-fade" style="color: #777f8d;"></span></div>
@@ -258,7 +258,7 @@
               <a href="#" class="btn d-block btn-primary btn-outline-primary py-3">Enroll Now!</a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
       
     </div>
@@ -464,7 +464,7 @@
               <a class="blog-img img rounded" style="background-image: url(images/image_2.jpg);"></a>
               <div class="text">
                 <div class="meta">
-                  <div><a href="#"><span class="fa fa-calendar"></span> Jan. 18, 2023</a></div>
+                  <div><a href="#"><span class="fa fa-calendar"></span> Aug. 15, 2023</a></div>
                   <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
                 </div>
                 <h3 class="heading"><a href="#">Independence Day</a></h3>
