--- a/about.html
+++ b/about.html
@@ -334,7 +334,7 @@
         <div class="col-md-6 col-lg">
           <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2 logo d-flex">
-              <a class="navbar-brand align-items-center" href="index-2.html">
+              <a class="navbar-brand align-items-center" href="index.html">
                 Astra
                 <span>Crusing Towards Success</span>
               </a>
@@ -342,8 +342,8 @@
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
             <ul class="ftco-footer-social list-unstyled mt-2">
               <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-              <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-              <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=100083549463033&mibextid=ZbWKwL"><span class="fa fa-facebook"></span></a></li>
+              <li><a href="#https://www.instagram.com/astra_public_school/?igshid=MzRlODBiNWFlZA%3D%3D><span class="fa fa-instagram"></span></a></li>
             </ul>
           </div>
         </div>
