--- a/contact.html
+++ b/contact.html
@@ -125,10 +125,10 @@
                   <div class="w-100 social-media mt-5">
                     <h3>Follow us here</h3>
                     <p>
-                      <a href="#">Facebook</a>
+                      <a href="https://www.facebook.com/profile.php?id=100083549463033&mibextid=ZbWKwL">Facebook</a>
                       <a href="#">Twitter</a>
-                      <a href="#">Instagram</a>
-                      <a href="#">Dribbble</a>
+                      <a href="https://www.instagram.com/astra_public_school/?igshid=MzRlODBiNWFlZA%3D%3D">Instagram</a>
+                      <!-- <a href="#">Dribbble</a> -->
                     </p>
                   </div>
                 </div>
@@ -157,8 +157,8 @@
             <p>To foster a community of curious, compassionate, and competent individuals, prepared to thrive in a dynamic and interconnected world.</p>
             <ul class="ftco-footer-social list-unstyled mt-2">
               <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-              <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-              <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=100083549463033&mibextid=ZbWKwL"><span class="fa fa-facebook"></span></a></li>
+              <li><a href="https://www.instagram.com/astra_public_school/?igshid=MzRlODBiNWFlZA%3D%3D"><span class="fa fa-instagram"></span></a></li>
             </ul>
           </div>
         </div>
